# ferrolens

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/releases/: 0.1.0.md
src/: app.rs  cli.rs  export.rs  input.rs  lib.rs  main.rs  theme.rs  tui.rs  ui.rs
src/data/: types.rs
src/data/loader/: delimited.rs  mod.rs  vcf.rs
src/filter/: eval.rs  mod.rs  parser.rs
tests/: app_flow.rs  delimited_loader.rs  filter_engine.rs  runtime_flow.rs  vcf_loader.rs
tests/fixtures/: dirty.txt  example.csv  example.tsv  example.vcf
