[package]
name = "ferrolens"
version = "0.1.0"
edition = "2021"
description = "A terminal-first review lens for bioinformatics result tables"
license = "MIT"
readme = "README.md"
repository = "https://github.com/H3dger/ferrolens"
homepage = "https://github.com/H3dger/ferrolens"
keywords = ["bioinformatics", "tui", "csv", "vcf", "terminal"]
categories = ["command-line-utilities", "science"]

[lib]
name = "ferrolens"
path = "src/lib.rs"

[[bin]]
name = "ferrolens"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
catppuccin = { version = "2.7", features = ["ratatui"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
csv = "1.4"
flate2 = "1.1"
ratatui = "0.29"
